[package]
name = "blog_os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# The profile used for `cargo build`
[profile.dev]
# Disable stack unwinding on panic
# Not mandatory considering it's already in x86_64-blog_os.json
panic = "abort"

# The profile used for `cargo build --release`
[profile.release]
# Disable stack unwinding on panic
# Not mandatory considering it's already in x86_64-blog_os.json
panic = "abort"

[dependencies]
bootloader = "0.9.23"
